# flowsim-tutor

./: .env.example  .gitignore  ARCHITECTURE.md  EVALS.md  LICENSE  README.md  SECURITY_AND_GUARDRAILS.md  chainlit.md  chat_app.py  index_docs.py  llm_connector.py  mcp_client.py  pyproject.toml  requirements.txt  server.py  web_system_prompt.py
.github/workflows/: ci.yml
data/docs/: FlowSimGUIHelp.md  FlowSimHelp.md  FlowSimSampleCasesHelp.md  PipelineEditorHelp.md  ProfileGeneratorHelp.md  WellEditorHelp.md
examples/: 01_search_docs.py  02_workflow.py  03_chat_loop.py  README.md
rag/: __init__.py  chunker.py  embedder.py  indexer.py  retriever.py
state/: __init__.py  notes.py  session.py
tests/: conftest.py  test_chunker.py  test_indexer.py  test_notes.py  test_retriever.py  test_session.py  test_truncate.py
tests/evals/: retrieval_eval.yaml  run_evals.py
tools/: __init__.py  notes_tools.py  search_tools.py  session_tools.py
